Add styles to all sections
Complete the general layout with random content.
Add Roboto mono font-family.
Set the maximum height and width to 1440px x 1912px.

--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
 <body>
   <header class="header">
     <nav>
-      <p class="nav-logo">Header Logo</p>
+      <div class="nav-logo">
+        Header Logo
+      </div>
       <ul>
-        <li><a href="#">link</a></li>
-        <li><a href="#">link</a></li>
-        <li><a href="#">link</a></li>
+        <li><a href="#">header link 1</a></li>
+        <li><a href="#">header link 2</a></li>
+        <li><a href="#">header link 3</a></li>
       </ul>
     </nav>
 
     <section class="hero">
       <div>
-        <h1>Website!</h1>
+        <h1 class="hero-title">This awesome website!</h1>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, iusto consequatur. Inventore, aut. Fugiat
-          tenetur quos consequuntur cumque, laborum repudiandae!
         </p>
         <button type="button">Sing up</button>
       </div>
@@ -37,7 +38,7 @@
 
   <main class="main">
     <section class="main-info">
-      <h2>Information</h2>
+      <h2 class="info-title">Random information.</h2>
       <div class="info-images">
         <figure>
           <img src="https://picsum.photos/512"
@@ -64,10 +65,8 @@
 
     <section class="main-quote">
       <blockquote>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, quam quod quos quasi mollitia officiis nulla,
-        beatae iure quo facilis repellendus voluptatibus deleniti aspernatur rem quae incidunt dolore explicabo.
-        Corporis!
-        <cite>- Muchi, Ai voice assiten</cite>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, atque omnis voluptate asperiores rerum animi?
+        <cite>- Seon, Ai voice assistant</cite>
       </blockquote>
     </section>
 
@@ -75,18 +74,18 @@
       <div class="singup-holder">
         <p>
           Call to action! It's time!
+          <br>
           <sub>
             Sign up for our product by clicking that button right over there!
           </sub>
         </p>
-        <button type="button">Sing up</button>
+        <button class="button-border" type="button">Sing up</button>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <p>&copy; drevelob</p>
+    <p>Copyright &copy; drevelob 2024</p>
   </footer>
 </body>
-
 </html>
