Add custome content and images folder

--- a/index.html
+++ b/index.html
@@ -12,61 +12,63 @@
   <header class="header">
     <nav>
       <div class="nav-logo">
-        Header Logo
+        <img src="./images/iconmonstr-dashboard-alt-filled.svg"
+             alt="logo" width="50px">
+        aVOCALi
       </div>
       <ul>
-        <li><a href="#">header link 1</a></li>
-        <li><a href="#">header link 2</a></li>
-        <li><a href="#">header link 3</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">VAIs</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
 
     <section class="hero">
       <div>
-        <h1 class="hero-title">This awesome website!</h1>
+        <h1 class="hero-title">AI voice assistant 🌟</h1>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea, iusto consequatur. Inventore, aut. Fugiat
+          Powerful tool integrated in all your systems, with the new version (V3) of conversation by artificial intelligence.
         </p>
         <button type="button">Sing up</button>
       </div>
       <figure>
-        <img src="https://picsum.photos/480/270"
-             alt="image-holder" width="480" height="270">
+        <img src="./images/hero_image_1280x540.jpg"
+             alt="agirls-sideshow" width="640" height="270">
       </figure>
     </section>
   </header>
 
   <main class="main">
     <section class="main-info">
-      <h2 class="info-title">Random information.</h2>
+      <h2 class="info-title">VAIs Flavors</h2>
       <div class="info-images">
         <figure>
-          <img src="https://picsum.photos/512"
-               alt="image-holder" width="256" height="256">
-          <figcaption>Lorem ipsum dolor sit amet consectetur.</figcaption>
+          <img src="./images/agirl_01_896x.jpg"
+               alt="agirl pink" width="448" height="448">
+          <figcaption>🩷 핑크색 🩷</figcaption>
         </figure>
         <figure>
-          <img src="https://picsum.photos/512"
-               alt="image-holder" width="256" height="256">
-          <figcaption>Lorem ipsum dolor sit amet consectetur.</figcaption>
+          <img src="./images/agirl_02_896x.jpg"
+               alt="agirl blue" width="448" height="448">
+          <figcaption>🩵 파란색 🩵</figcaption>
         </figure>
         <figure>
-          <img src="https://picsum.photos/512"
-               alt="image-holder" width="256" height="256">
-          <figcaption>Lorem ipsum dolor sit amet consectetur.</figcaption>
+          <img src="./images/agirl_03_896x.jpg"
+               alt="agirl purple" width="448" height="448">
+          <figcaption>💜 보라색 💜</figcaption>
         </figure>
         <figure>
-          <img src="https://picsum.photos/512"
-               alt="image-holder" width="256" height="256">
-          <figcaption>Lorem ipsum dolor sit amet consectetur.</figcaption>
+          <img src="./images/agirl_04_896x.jpg"
+               alt="agirl green" width="448" height="448">
+          <figcaption>💚 초록색 💚</figcaption>
         </figure>
       </div>
     </section>
 
     <section class="main-quote">
       <blockquote>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, atque omnis voluptate asperiores rerum animi?
-        <cite>- Seon, Ai voice assistant</cite>
+        Artificial intelligence is the key to creating a future in which machines and humans can communicate and work together harmoniously.
+        <cite>✨ Borasaek, Ai voice assistant</cite>
       </blockquote>
     </section>
 
