Add id to sections, and link them to the nav menu

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         aVOCALi
       </div>
       <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">VAIs</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#hero">About</a></li>
+        <li><a href="#main-info">VAIs</a></li>
+        <li><a href="#footer">Contact</a></li>
       </ul>
     </nav>
 
-    <section class="hero">
+    <section id="hero" class="hero">
       <div>
         <h1 class="hero-title">AI voice assistant 🌟</h1>
         <p>
@@ -39,7 +39,7 @@
   </header>
 
   <main class="main">
-    <section class="main-info">
+    <section id="main-info" class="main-info">
       <h2 class="info-title">VAIs Flavors</h2>
       <div class="info-images">
         <figure>
@@ -86,7 +86,7 @@
     </section>
   </main>
 
-  <footer class="footer">
+  <footer id="footer" class="footer">
     <p>Copyright &copy; drevelob 2024</p>
   </footer>
 </body>
