Add custome footer with contact information

--- a/index.html
+++ b/index.html
@@ -87,7 +87,18 @@
   </main>
 
   <footer id="footer" class="footer">
-    <p>Copyright &copy; drevelob 2024</p>
+    <p><a href="#top" class="footer-button">Scroll to top</a></p>
+    <small>
+      AI Image Generator <a href="https://leonardo.ai/">Leonardo.Ai</a>
+    </small>
+    <br>
+    <small class="footer-info">
+      The Odin Project 2024 | Foundations | Project: Landing Page |
+      <a href="https://github.com/drevelob">
+        <img src="./images/github-mark-white.svg" alt="Github Logo" width="16">
+        drevelob
+      </a>
+    </small>
   </footer>
 </body>
 </html>
