--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Project: Landing Page - Foundations Course">
   <title>Odin Landing Page</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./images/ribbon-bow_1f380.svg" type="image/svg+xml">
 </head>
 <body>
   <header class="header">
